fix java 21 lang